compiler/testData/diagnostics/tests/smartCasts/smartCastWithOrFalse.kt
fun main(x: Any?) {
    if (x is String || false) {
        <!DEBUG_INFO_SMARTCAST!>x<!>.length
    }
    else {
        x.<!UNRESOLVED_REFERENCE!>length<!>
    }
}
